--- a/package.json
+++ b/package.json
@@ -29,21 +29,21 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
-    "commander": "^11.0.0",
     "chalk": "^4.1.2",
-    "simple-git": "^3.19.0",
+    "commander": "^11.0.0",
+    "dotenv": "^16.3.0",
     "fs-extra": "^11.1.1",
     "ora": "^5.4.1",
-    "dotenv": "^16.3.0"
+    "simple-git": "^3.19.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
+    "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.0.0",
     "jest": "^29.0.0",
-    "@types/jest": "^29.0.0",
     "ts-jest": "^29.0.0",
     "typescript": "^5.0.0"
   },
