--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "tsc --watch",
     "prepublishOnly": "npm run build",
     "test": "jest",
+    "test:integration": "jest --testPathPattern=integration --testPathIgnorePatterns='integration-config|setup' --setupFilesAfterEnv='<rootDir>/src/__tests__/integration/setup.ts' --detectOpenHandles --forceExit --testTimeout=180000",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
@@ -28,13 +29,16 @@
   "author": "DebuggAI",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.0",
+    "@types/uuid": "^10.0.0",
+    "axios": "^1.11.0",
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
     "dotenv": "^16.3.0",
     "fs-extra": "^11.1.1",
+    "ngrok": "^5.0.0-beta.2",
     "ora": "^5.4.1",
-    "simple-git": "^3.19.0"
+    "simple-git": "^3.19.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
