--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.3.0",
     "fs-extra": "^11.1.1",
     "ora": "^5.4.1",
+    "posthog-node": "^5.8.1",
     "simple-git": "^3.19.0",
     "uuid": "^11.1.0"
   },
