--- a/package.json
+++ b/package.json
@@ -35,13 +35,11 @@
     "commander": "^11.0.0",
     "dotenv": "^16.3.0",
     "fs-extra": "^11.1.1",
+    "ngrok": "^5.0.0-beta.2",
     "ora": "^5.4.1",
     "posthog-node": "^5.8.1",
     "simple-git": "^3.19.0",
     "uuid": "^11.1.0"
-  },
-  "optionalDependencies": {
-    "ngrok": "^5.0.0-beta.2"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
