--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "commander": "^11.0.0",
     "dotenv": "^16.3.0",
     "fs-extra": "^11.1.1",
+    "mkdirp": "^3.0.1",
     "ngrok": "^5.0.0-beta.2",
     "ora": "^5.4.1",
     "posthog-node": "^5.8.1",
